--- a/index.html
+++ b/index.html
@@ -8,31 +8,29 @@
   <body>
     <header>
       <nav>
+        <a href="./index.html"> WebStudio </a>
         <ul>
-          <li>
-            <a href="#"> <img src="#" alt="Comapny Logo" /> </a>
-          </li>
-        </ul>
-        <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11000111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
-      <div>
-        <h1>Effective Solu for Your Business</h1>
-        <button type="button">Order Service</button>
-      </div>
     </header>
 
     <main>
-      <div class="feature">
+      <section>
+        <h1>Effective Solu for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+
+      <section>
+        <h2>-</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -63,68 +61,61 @@
             </p>
           </li>
         </ul>
-      </div>
-      <div>
-        <div>
-          <h2>Our Team</h2>
-        </div>
-        <div class="our-team">
-          <div>
+      </section>
+
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
             <img
-              src="./images/img-mark.jpg"
+              src="../images/img-mark.jpg"
               alt="Mark Guerrero Photo"
               width="264"
               height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
-          </div>
-          <div>
+          </li>
+          <li>
             <img
-              src="./images/img-tom.jpg"
+              src="../images/img-tom.jpg"
               alt="Tom Ford Photo"
               width="264"
               height="260"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
-          </div>
-          <div>
+          </li>
+          <li>
             <img
-              src="./images/img-camila.jpg"
+              src="../images/img-camila.jpg"
               alt="Camila Garcia Photo"
               width="264"
               height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
-          </div>
-          <div>
+          </li>
+          <li>
             <img
-              src="./images/img-daniel.jpg"
+              src="../images/img-daniel.jpg"
               alt="Daniel Wilson Photo"
               width="264"
               height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
-          </div>
-        </div>
-      </div>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
-      <div>
-        <ul>
-          <li>
-            <a href="#"> <img src="#" alt="Comapny Logo" /> </a>
-          </li>
-          <li>
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </li>
-        </ul>
-      </div>
+      <a href="./index.html"> WebStudio </a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
