--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main>
       <section>
-        <h1>Effective Solu for Your Business</h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
@@ -68,7 +68,7 @@
         <ul>
           <li>
             <img
-              src="../images/img-mark.jpg"
+              src="./images/img-mark.jpg"
               alt="Mark Guerrero Photo"
               width="264"
               height="260"
@@ -78,7 +78,7 @@
           </li>
           <li>
             <img
-              src="../images/img-tom.jpg"
+              src="./images/img-tom.jpg"
               alt="Tom Ford Photo"
               width="264"
               height="260"
@@ -88,7 +88,7 @@
           </li>
           <li>
             <img
-              src="../images/img-camila.jpg"
+              src="./images/img-camila.jpg"
               alt="Camila Garcia Photo"
               width="264"
               height="260"
@@ -98,7 +98,7 @@
           </li>
           <li>
             <img
-              src="../images/img-daniel.jpg"
+              src="./images/img-daniel.jpg"
               alt="Daniel Wilson Photo"
               width="264"
               height="260"
