--- a/index.html
+++ b/index.html
@@ -3,20 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link href="./style.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html"> WebStudio </a>
-        <ul>
+        <a class="logo" href="./index.html"> <span>WEB</span>STUDIO </a>
+        <ul class="nav">
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="address">
+        <ul class="nav-address">
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
@@ -24,14 +37,14 @@
     </header>
 
     <main>
-      <section>
+      <section class="solutions-block">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="order-button">Order Service</button>
       </section>
 
       <section>
-        <h2>-</h2>
-        <ul>
+        <h2>Features</h2>
+        <ul class="features">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -63,9 +76,9 @@
         </ul>
       </section>
 
-      <section>
+      <section class="our-team-section">
         <h2>Our Team</h2>
-        <ul>
+        <ul class="our-team-p">
           <li>
             <img
               src="./images/img-mark.jpg"
@@ -108,11 +121,79 @@
           </li>
         </ul>
       </section>
+
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/Banking App.jpg"
+              alt="Banking App Photo"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/Cashless Payment.jpg"
+              alt="Cashless Payment Photo"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Meditation App.jpg"
+              alt="Meditation App Photo"
+              width="360"
+              height="300"
+            />
+            <h3>Meditatipn App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/Taxi Service.jpg"
+              alt="Taxi Service Photo"
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Screen Illustrations.jpg"
+              alt="Screen Illustrations Photo"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/Online Courses.jpg"
+              alt="Online Courses Photo"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
-    <footer>
-      <a href="./index.html"> WebStudio </a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo-footer">
+        <span class="logo-span">WEB</span>STUDIO</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
