--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./style.css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +21,7 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html"> <span>WEB</span>STUDIO </a>
+        <a class="logo" href="./index.html"> WEB<span>STUDIO</span> </a>
         <ul class="nav">
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -191,7 +191,7 @@
 
     <footer class="footer">
       <a href="./index.html" class="logo-footer">
-        <span class="logo-span">WEB</span>STUDIO</a
+        WEB<span class="logo-footer-span">STUDIO</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
