--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html"> WEB<span>STUDIO</span> </a>
+        <a class="logo" href="./index.html"> Web<span>Studio</span> </a>
         <ul class="nav">
-          <li><a href="#">Studio</a></li>
+          <li><a href="./index.html">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
@@ -44,31 +44,31 @@
 
       <section>
         <h2>Features</h2>
-        <ul class="features">
+        <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="h3">Strategy</h3>
+            <p class="p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="h3">Punctuality</h3>
+            <p class="p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="h3">Diligence</h3>
+            <p class="p">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="h3">Technologies</h3>
+            <p class="p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -127,7 +127,7 @@
         <ul>
           <li>
             <img
-              src="./images/Banking App.jpg"
+              src="./images/banking-app.jpg "
               alt="Banking App Photo"
               width="360"
               height="300"
@@ -137,7 +137,7 @@
           </li>
           <li>
             <img
-              src="./images/Cashless Payment.jpg"
+              src="./images/cashless-payment.jpg"
               alt="Cashless Payment Photo"
               width="360"
               height="300"
@@ -147,7 +147,7 @@
           </li>
           <li>
             <img
-              src="./images/Meditation App.jpg"
+              src="./images/meditation-app.jpg"
               alt="Meditation App Photo"
               width="360"
               height="300"
@@ -157,7 +157,7 @@
           </li>
           <li>
             <img
-              src="./images/Taxi Service.jpg"
+              src="./images/taxi-service.jpg"
               alt="Taxi Service Photo"
               width="360"
               height="300"
@@ -167,7 +167,7 @@
           </li>
           <li>
             <img
-              src="./images/Screen Illustrations.jpg"
+              src="./images/screen-illustrations.jpg"
               alt="Screen Illustrations Photo"
               width="360"
               height="300"
@@ -177,7 +177,7 @@
           </li>
           <li>
             <img
-              src="./images/Online Courses.jpg"
+              src="./images/online-courses.jpg"
               alt="Online Courses Photo"
               width="360"
               height="300"
@@ -191,7 +191,7 @@
 
     <footer class="footer">
       <a href="./index.html" class="logo-footer">
-        WEB<span class="logo-footer-span">STUDIO</span></a
+        Web<span class="logo-footer-span">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
