--- a/index.html
+++ b/index.html
@@ -46,29 +46,29 @@
         <h2>Features</h2>
         <ul>
           <li>
-            <h3 class="h3">Strategy</h3>
-            <p class="p">
+            <h3 class="h3-text">Strategy</h3>
+            <p class="p-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="h3">Punctuality</h3>
-            <p class="p">
+            <h3 class="h3-text">Punctuality</h3>
+            <p class="p-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="h3">Diligence</h3>
-            <p class="p">
+            <h3 class="h3-text">Diligence</h3>
+            <p class="p-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="h3">Technologies</h3>
-            <p class="p">
+            <h3 class="h3-text">Technologies</h3>
+            <p class="p-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
