--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </section>
 
       <section>
-        <h2>Features</h2>
+        <h2 class="h2-features">Features</h2>
         <ul>
           <li>
             <h3 class="h3-text">Strategy</h3>
