--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <section>
         <h2 class="h2-features">Features</h2>
-        <ul>
+        <ul class="features-list">
           <li>
             <h3 class="h3-text">Strategy</h3>
             <p class="p-text">
