--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <nav>
         <a class="logo" href="./index.html"> Web<span>Studio</span> </a>
         <ul class="nav">
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a class="a-nav" href="./index.html">Studio</a></li>
+          <li><a class="a-nav" href="./index.html">Portfolio</a></li>
+          <li><a class="a-nav" href="./index.html">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
@@ -43,31 +43,31 @@
       </section>
 
       <section>
-        <h2 class="h2-features">Features</h2>
-        <ul class="features-list">
+        <h2>Features</h2>
+        <ul>
           <li>
-            <h3 class="h3-text">Strategy</h3>
+            <h3 class="features-text">Strategy</h3>
             <p class="p-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="h3-text">Punctuality</h3>
+            <h3 class="features-text">Punctuality</h3>
             <p class="p-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="h3-text">Diligence</h3>
+            <h3 class="features-text">Diligence</h3>
             <p class="p-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="h3-text">Technologies</h3>
+            <h3 class="features-text">Technologies</h3>
             <p class="p-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
