--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <main>
       <section class="solutions-block">
-        <h1 class="h1-text">Effective Solutions for Your Business</h1>
+        <h1 class="main-text">Effective Solutions for Your Business</h1>
         <button type="button" class="order-button">Order Service</button>
       </section>
 
