--- a/index.html
+++ b/index.html
@@ -23,15 +23,21 @@
       <nav>
         <a class="logo" href="./index.html"> Web<span>Studio</span> </a>
         <ul class="nav">
-          <li><a class="a-nav" href="./index.html">Studio</a></li>
-          <li><a class="a-nav" href="./index.html">Portfolio</a></li>
-          <li><a class="a-nav" href="./index.html">Contacts</a></li>
+          <li><a class="nav-menu" href="./index.html">Studio</a></li>
+          <li><a class="nav-menu" href="">Portfolio</a></li>
+          <li><a class="nav-menu" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
-        <ul class="nav-address">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul>
+          <li>
+            <a class="tel-mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="tel-mail" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
@@ -77,53 +83,53 @@
       </section>
 
       <section class="our-team-section">
-        <h2>Our Team</h2>
-        <ul class="our-team-p">
-          <li>
+        <h2 class="our-team">Our Team</h2>
+        <ul>
+          <li class="our-team-people">
             <img
               src="./images/img-mark.jpg"
               alt="Mark Guerrero Photo"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="our-team-name">Mark Guerrero</h3>
+            <p class="our-team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="our-team-people">
             <img
               src="./images/img-tom.jpg"
               alt="Tom Ford Photo"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="our-team-name">Tom Ford</h3>
+            <p class="our-team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="our-team-people">
             <img
               src="./images/img-camila.jpg"
               alt="Camila Garcia Photo"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="our-team-name">Camila Garcia</h3>
+            <p class="our-team-text">Marketing</p>
           </li>
-          <li>
+          <li class="our-team-people">
             <img
               src="./images/img-daniel.jpg"
               alt="Daniel Wilson Photo"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="our-team-name">Daniel Wilson</h3>
+            <p class="our-team-text">UI Designer</p>
           </li>
         </ul>
       </section>
 
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="our-portfolio">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -132,8 +138,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-text">Banking App</h3>
+            <p class="portfolio-program">App</p>
           </li>
           <li>
             <img
@@ -142,8 +148,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-text">Cashless Payment</h3>
+            <p class="portfolio-program">Marketing</p>
           </li>
           <li>
             <img
@@ -152,8 +158,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditatipn App</h3>
-            <p>App</p>
+            <h3 class="portfolio-text">Meditation App</h3>
+            <p class="portfolio-program">App</p>
           </li>
           <li>
             <img
@@ -162,8 +168,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-text">Taxi Service</h3>
+            <p class="portfolio-program">Marketing</p>
           </li>
           <li>
             <img
@@ -172,8 +178,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-text">Screen Illustrations</h3>
+            <p class="portfolio-program">Design</p>
           </li>
           <li>
             <img
@@ -182,8 +188,8 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-text">Online Courses</h3>
+            <p class="portfolio-program">Marketing</p>
           </li>
         </ul>
       </section>
