--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
     <link href="./css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,9 +18,9 @@
   </head>
   <body>
     <div class="container">
-      <header>
+      <header class="had-container" class="container">
         <div class="nav-container">
-          <nav>
+          <nav class="container-nav">
             <a class="logo" href="./index.html"> Web<span>Studio</span> </a>
             <ul class="nav">
               <li><a class="nav-menu" href="./index.html">Studio</a></li>
