--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <div class="container">
-      <header class="had-container" class="container">
-        <div class="nav-container">
+    <div class="container-body">
+      <header class="had-container">
+        <div class="container-nav">
           <nav class="container-nav">
             <a class="logo" href="./index.html"> Web<span>Studio</span> </a>
             <ul class="nav">
@@ -47,165 +47,195 @@
 
       <main>
         <section class="solutions-block">
-          <h1 class="main-text">Effective Solutions for Your Business</h1>
-          <button type="button" class="order-button">Order Service</button>
+          <div class="container">
+            <h1 class="main-text">Effective Solutions for Your Business</h1>
+            <button type="button" class="order-button">Order Service</button>
+          </div>
         </section>
 
         <section class="features">
-          <h2>Features</h2>
-          <ul>
-            <li>
-              <h3 class="features-text">Strategy</h3>
-              <p class="p-text">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li>
-              <h3 class="features-text">Punctuality</h3>
-              <p class="p-text">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li>
-              <h3 class="features-text">Diligence</h3>
-              <p class="p-text">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li>
-              <h3 class="features-text">Technologies</h3>
-              <p class="p-text">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="visually-hidden">Features</h2>
+            <ul class="features-list">
+              <li class="point">
+                <h3 class="features-text">Strategy</h3>
+                <p class="p-text">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </li>
+              <li class="point">
+                <h3 class="features-text">Punctuality</h3>
+                <p class="p-text">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
+              </li>
+              <li class="point">
+                <h3 class="features-text">Diligence</h3>
+                <p class="p-text">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </li>
+              <li class="point">
+                <h3 class="features-text">Technologies</h3>
+                <p class="p-text">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
+              </li>
+            </ul>
+          </div>
         </section>
 
         <section class="our-team-section">
-          <h2 class="our-team">Our Team</h2>
-          <ul>
-            <li class="our-team-people">
-              <img
-                src="./images/img-mark.jpg"
-                alt="Mark Guerrero Photo"
-                width="264"
-                height="260"
-              />
-              <h3 class="our-team-name">Mark Guerrero</h3>
-              <p class="our-team-text">Product Designer</p>
-            </li>
-            <li class="our-team-people">
-              <img
-                src="./images/img-tom.jpg"
-                alt="Tom Ford Photo"
-                width="264"
-                height="260"
-              />
-              <h3 class="our-team-name">Tom Ford</h3>
-              <p class="our-team-text">Frontend Developer</p>
-            </li>
-            <li class="our-team-people">
-              <img
-                src="./images/img-camila.jpg"
-                alt="Camila Garcia Photo"
-                width="264"
-                height="260"
-              />
-              <h3 class="our-team-name">Camila Garcia</h3>
-              <p class="our-team-text">Marketing</p>
-            </li>
-            <li class="our-team-people">
-              <img
-                src="./images/img-daniel.jpg"
-                alt="Daniel Wilson Photo"
-                width="264"
-                height="260"
-              />
-              <h3 class="our-team-name">Daniel Wilson</h3>
-              <p class="our-team-text">UI Designer</p>
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="our-team">Our Team</h2>
+            <ul class="our-team-list">
+              <li class="our-team-people">
+                <img
+                  src="./images/img-mark.jpg"
+                  alt="Mark Guerrero Photo"
+                  width="264"
+                  height="260"
+                />
+                <div class="job-name">
+                  <h3 class="our-team-name">Mark Guerrero</h3>
+                  <p class="our-team-text">Product Designer</p>
+                </div>
+              </li>
+              <li class="our-team-people">
+                <img
+                  src="./images/img-tom.jpg"
+                  alt="Tom Ford Photo"
+                  width="264"
+                  height="260"
+                />
+                <div class="job-name">
+                  <h3 class="our-team-name">Tom Ford</h3>
+                  <p class="our-team-text">Frontend Developer</p>
+                </div>
+              </li>
+              <li class="our-team-people">
+                <img
+                  src="./images/img-camila.jpg"
+                  alt="Camila Garcia Photo"
+                  width="264"
+                  height="260"
+                />
+                <div class="job-name">
+                  <h3 class="our-team-name">Camila Garcia</h3>
+                  <p class="our-team-text">Marketing</p>
+                </div>
+              </li>
+              <li class="our-team-people">
+                <img
+                  src="./images/img-daniel.jpg"
+                  alt="Daniel Wilson Photo"
+                  width="264"
+                  height="260"
+                />
+                <div class="job-name">
+                  <h3 class="our-team-name">Daniel Wilson</h3>
+                  <p class="our-team-text">UI Designer</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </section>
 
-        <section>
-          <h2 class="our-portfolio">Our Portfolio</h2>
-          <ul>
-            <li>
-              <img
-                src="./images/banking-app.jpg"
-                alt="Banking App Photo"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-text">Banking App</h3>
-              <p class="portfolio-program">App</p>
-            </li>
-            <li>
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="Cashless Payment Photo"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-text">Cashless Payment</h3>
-              <p class="portfolio-program">Marketing</p>
-            </li>
-            <li>
-              <img
-                src="./images/meditation-app.jpg"
-                alt="Meditation App Photo"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-text">Meditation App</h3>
-              <p class="portfolio-program">App</p>
-            </li>
-            <li>
-              <img
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service Photo"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-text">Taxi Service</h3>
-              <p class="portfolio-program">Marketing</p>
-            </li>
-            <li>
-              <img
-                src="./images/screen-illustrations.jpg"
-                alt="Screen Illustrations Photo"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-text">Screen Illustrations</h3>
-              <p class="portfolio-program">Design</p>
-            </li>
-            <li>
-              <img
-                src="./images/online-courses.jpg"
-                alt="Online Courses Photo"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-text">Online Courses</h3>
-              <p class="portfolio-program">Marketing</p>
-            </li>
-          </ul>
+        <section class="portfolio">
+          <div class="container">
+            <h2 class="our-portfolio">Our Portfolio</h2>
+            <ul class="portfolio-list">
+              <li class="portfolio-point">
+                <img
+                  src="./images/banking-app.jpg"
+                  alt="Banking App Photo"
+                  width="360"
+                  height="300"
+                />
+                <div class="app-name">
+                  <h3 class="portfolio-text">Banking App</h3>
+                  <p class="portfolio-program">App</p>
+                </div>
+              </li>
+              <li>
+                <img
+                  src="./images/cashless-payment.jpg"
+                  alt="Cashless Payment Photo"
+                  width="360"
+                  height="300"
+                />
+                <div class="app-name">
+                  <h3 class="portfolio-text">Cashless Payment</h3>
+                  <p class="portfolio-program">Marketing</p>
+                </div>
+              </li>
+              <li>
+                <img
+                  src="./images/meditation-app.jpg"
+                  alt="Meditation App Photo"
+                  width="360"
+                  height="300"
+                />
+                <div class="app-name">
+                  <h3 class="portfolio-text">Meditation App</h3>
+                  <p class="portfolio-program">App</p>
+                </div>
+              </li>
+              <li>
+                <img
+                  src="./images/taxi-service.jpg"
+                  alt="Taxi Service Photo"
+                  width="360"
+                  height="300"
+                />
+                <div class="app-name">
+                  <h3 class="portfolio-text">Taxi Service</h3>
+                  <p class="portfolio-program">Marketing</p>
+                </div>
+              </li>
+              <li>
+                <img
+                  src="./images/screen-illustrations.jpg"
+                  alt="Screen Illustrations Photo"
+                  width="360"
+                  height="300"
+                />
+                <div class="app-name">
+                  <h3 class="portfolio-text">Screen Illustrations</h3>
+                  <p class="portfolio-program">Design</p>
+                </div>
+              </li>
+              <li>
+                <img
+                  src="./images/online-courses.jpg"
+                  alt="Online Courses Photo"
+                  width="360"
+                  height="300"
+                />
+                <div class="app-name">
+                  <h3 class="portfolio-text">Online Courses</h3>
+                  <p class="portfolio-program">Marketing</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </section>
       </main>
 
       <footer class="footer">
-        <a href="./index.html" class="logo-footer">
-          Web<span class="logo-footer-span">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="container">
+          <a href="./index.html" class="logo-footer">
+            Web<span class="logo-footer-span">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </footer>
     </div>
   </body>
