--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                   <p class="portfolio-program">App</p>
                 </div>
               </li>
-              <li>
+              <li class="portfolio-point">
                 <img
                   src="./images/cashless-payment.jpg"
                   alt="Cashless Payment Photo"
@@ -173,7 +173,7 @@
                   <p class="portfolio-program">Marketing</p>
                 </div>
               </li>
-              <li>
+              <li class="portfolio-point">
                 <img
                   src="./images/meditation-app.jpg"
                   alt="Meditation App Photo"
@@ -185,7 +185,7 @@
                   <p class="portfolio-program">App</p>
                 </div>
               </li>
-              <li>
+              <li class="portfolio-point">
                 <img
                   src="./images/taxi-service.jpg"
                   alt="Taxi Service Photo"
@@ -197,7 +197,7 @@
                   <p class="portfolio-program">Marketing</p>
                 </div>
               </li>
-              <li>
+              <li class="portfolio-point">
                 <img
                   src="./images/screen-illustrations.jpg"
                   alt="Screen Illustrations Photo"
@@ -209,7 +209,7 @@
                   <p class="portfolio-program">Design</p>
                 </div>
               </li>
-              <li>
+              <li class="portfolio-point">
                 <img
                   src="./images/online-courses.jpg"
                   alt="Online Courses Photo"
