--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
 
         <section class="features">
-          <div class="container">
+          <div class="features-container container">
             <h2 class="visually-hidden">Features</h2>
             <ul class="features-list">
               <li class="point">
