--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="container-body">
       <header class="had-container">
-        <div class="container-nav">
+        <div class="container container-nav">
           <nav class="container-nav">
             <a class="logo" href="./index.html"> Web<span>Studio</span> </a>
             <ul class="nav">
