--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 
       <main>
         <section class="solutions-block">
-          <div class="container">
+          <div class="container container-solutions">
             <h1 class="main-text">Effective Solutions for Your Business</h1>
             <button type="button" class="order-button">Order Service</button>
           </div>
         </section>
 
         <section class="features">
-          <div class="container features-container">
+          <div class="container">
             <h2 class="visually-hidden">Features</h2>
             <ul class="features-list">
               <li class="point">
@@ -90,7 +90,7 @@
         </section>
 
         <section class="our-team-section">
-          <div class="container">
+          <div class="container continer-team">
             <h2 class="our-team">Our Team</h2>
             <ul class="our-team-list">
               <li class="our-team-people">
